--- a/client/src/components/singlePost/singlePost.css
+++ b/client/src/components/singlePost/singlePost.css
@@ -5,6 +5,8 @@
 .singlePostWrapper {
     padding: 20px;
     padding-right: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .singlePostImg {
@@ -17,8 +19,22 @@
 .singlePostTitle {
     text-align: center;
     margin: 10px;
-    font-family: 'Lora', serif;
+    font-family: "Lora", serif;
     font-size: 25px;
+}
+
+.singlePostTitleInput {
+    text-align: center;
+    margin: 10px;
+    font-family: "Lora", serif;
+    font-size: 25px;
+    color: gray;
+    border: none;
+    border-bottom: 1px solid lightgray;
+}
+
+.singlePostTitleInput:focus {
+    outline: none;
 }
 
 .singlePostEdit {
@@ -44,7 +60,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 16px;
-    font-family: 'Varela Round', sans-serif;
+    font-family: "Varela Round", sans-serif;
     color: #b39656;
 }
 
@@ -58,4 +74,26 @@
     margin-left: 30px;
     font-size: 30px;
     font-weight: 600;
+}
+
+.singlePostDescInput {
+    border: none;
+    color: #666;
+    font-size: 18px;
+    line-height: 25px;
+}
+
+.singlePostDescInput:focus {
+    outline: none;
+}
+
+.singlePostButton {
+    width: 100px;
+    border: none;
+    background-color: teal;
+    padding: 10px;
+    margin-top: 20px;
+    color: #fff;
+    align-self: flex-end;
+    cursor: pointer;
 }
