--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -38,6 +38,11 @@
     padding: 10px;
 }
 
+.loginButton:disabled {
+    cursor: not-allowed;
+    background-color: #f6cccc;
+}
+
 .loginRegisterButton {
     position: absolute;
     top: 60px;
